--- a/locale/az/LC_MESSAGES/django.po
+++ b/locale/az/LC_MESSAGES/django.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-10-29 12:52+0300\n"
-"PO-Revision-Date: 2024-10-29 18:08+0300\n"
+"PO-Revision-Date: 2024-10-29 18:18+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: az\n"
@@ -56,18 +56,17 @@ msgstr "Rəylər"
 #: article/templates/article/article.html:344
 #: chat/templates/chat/dialogue.html:160
 #: player/templates/player/redesign/overview.html:1034
-#, fuzzy
-#| msgid "У вас пока еще нет стикеров"
 msgctxt "overview"
 msgid "У вас пока еще нет стикеров"
 msgstr "Hələ stikerləriniz yoxdur"
 
+#. Отредактировано B♤SS, id 2344
 #: article/templates/article/article.html:357
 #: chat/templates/chat/dialogue.html:173
 #: player/templates/player/redesign/overview.html:1047
 msgctxt "overview"
 msgid "магазин"
-msgstr ""
+msgstr "Mağaza"
 
 #. Отредактировано B♤SS, id 2344
 #: article/templates/article/articles.html:29 article/views/articles.py:123
@@ -2381,11 +2380,12 @@ msgctxt "chat"
 msgid "Вы не состоите в этом чате"
 msgstr "partiyadakı mövqe"
 
+#. Отредактировано B♤SS, id 2344
 #: event/templates/event/anniversary.html:218
 #: player/templates/player/redesign/overview.html:630
 msgctxt "overview"
 msgid "Годовщина сервера!"
-msgstr ""
+msgstr "Serverin ildönümü!"
 
 #: event/templates/event/anniversary.html:221
 #: event/templates/event/festival.html:221
@@ -4900,107 +4900,107 @@ msgid "Мне только что поступил звонок от Ваших 
 msgstr ""
 
 #: player/templates/player/redesign/overview.html:206
-#, fuzzy
-#| msgid "обзор"
 msgctxt "overview"
 msgid "обзор"
 msgstr "baş səhifə"
 
 #: player/templates/player/redesign/overview.html:227
-#, fuzzy
-#| msgid "чат"
 msgctxt "overview"
 msgid "чат"
 msgstr "söhbət"
 
 #: player/templates/player/redesign/overview.html:238
-#, fuzzy
-#| msgid "мир"
 msgctxt "overview"
 msgid "мир"
 msgstr "Dünya"
 
 #: player/templates/player/redesign/overview.html:294
-#, fuzzy
-#| msgid "независимый регион"
 msgctxt "overview"
 msgid "независимый регион"
 msgstr "müstəqil bölgə"
 
 #: player/templates/player/redesign/overview.html:409
-#, fuzzy
-#| msgid "войн нет"
 msgctxt "overview"
 msgid "войн нет"
 msgstr "Döyüş yoxdur"
 
+#. Отредактировано B♤SS, id 2344
 #: player/templates/player/redesign/overview.html:437
 msgctxt "overview"
 msgid "С новым годом!"
-msgstr ""
+msgstr "Yeni iliniz mübarək!"
 
+#. Отредактировано B♤SS, id 2344
 #: player/templates/player/redesign/overview.html:593
 msgctxt "overview"
 msgid "Летний фестиваль"
-msgstr ""
+msgstr "Yay festivalı"
 
+#. Отредактировано B♤SS, id 2344
 #: player/templates/player/redesign/overview.html:652
 msgctxt "overview"
 msgid "Зимний фестиваль"
-msgstr ""
+msgstr "Qiş festivalı"
 
+#. Отредактировано B♤SS, id 2344
 #: player/templates/player/redesign/overview.html:685
 msgctxt "overview"
 msgid "сила"
-msgstr ""
+msgstr "Güc"
 
+#. Отредактировано B♤SS, id 2344
 #: player/templates/player/redesign/overview.html:690
 msgctxt "overview"
 msgid "инт"
-msgstr ""
+msgstr "Bilik"
 
+#. Отредактировано B♤SS, id 2344
 #: player/templates/player/redesign/overview.html:695
 msgctxt "overview"
 msgid "вын"
-msgstr ""
+msgstr "Dözümlülük"
 
+#. Отредактировано B♤SS, id 2344
 #: player/templates/player/redesign/overview.html:711
 msgctxt "overview"
 msgid "Выборы лидера"
-msgstr ""
+msgstr "Lider seçkiləri"
 
+#. Отредактировано B♤SS, id 2344
 #: player/templates/player/redesign/overview.html:714
 msgctxt "overview"
 msgid "Выборы"
-msgstr ""
+msgstr "Seçkilər"
 
+#. Отредактировано B♤SS, id 2344
 #: player/templates/player/redesign/overview.html:719
 msgctxt "overview"
 msgid "партии"
-msgstr ""
+msgstr "Partiyalar"
 
+#. Отредактировано B♤SS, id 2344
 #: player/templates/player/redesign/overview.html:719
 msgctxt "overview"
 msgid "государства"
-msgstr ""
+msgstr "Ölkələr"
 
+#. Отредактировано B♤SS, id 2344
 #: player/templates/player/redesign/overview.html:719
 msgctxt "overview"
 msgid "региона"
-msgstr ""
+msgstr "Bölgələr"
 
 #: player/templates/player/redesign/overview.html:756
 #: player/templates/player/redesign/overview.html:801
-#, fuzzy
-#| msgid "партий нет"
 msgctxt "overview"
 msgid "партий нет"
 msgstr "Partiya yoxdur"
 
+#. Отредактировано B♤SS, id 2344
 #: player/templates/player/redesign/overview.html:763
 msgctxt "overview"
 msgid "парламент"
-msgstr ""
+msgstr "Parlament"
 
 #: player/templates/player/redesign/overview_skills.html:24
 #: player/templates/player/redesign/overview_skills.html:90
