заглушка ВК модуля

--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-10-30 00:16+0300\n"
-"PO-Revision-Date: 2024-10-30 00:17+0300\n"
+"POT-Creation-Date: 2024-10-30 18:02+0300\n"
+"PO-Revision-Date: 2024-10-30 18:02+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -2152,6 +2152,36 @@ msgctxt "chat"
 msgid "Вы не состоите в этом чате"
 msgstr "You are not a member of this chat"
 
+#: education/views/edu_overview.py:51 education/views/edu_overview.py:54
+#: player/views/overview.py:372 player/views/overview.py:375
+msgctxt "education"
+msgid "Анна"
+msgstr "Ann"
+
+#: education/views/edu_overview.py:54 player/views/overview.py:375
+msgctxt "education"
+msgid "Лин"
+msgstr "Lin"
+
+#: education/views/edu_overview.py:54 player/views/overview.py:375
+msgctxt "education"
+msgid "Мария"
+msgstr "Maria"
+
+#: education/views/edu_overview.py:54 player/views/overview.py:375
+msgctxt "education"
+msgid "София"
+msgstr "Sofia"
+
+#: education/views/edu_overview.py:54 player/views/overview.py:375
+msgctxt "education"
+msgid "Ольга"
+msgstr "Olga"
+
+#: education/views/edu_overview.py:71 player/views/overview.py:381
+msgid "Обзор"
+msgstr "Overview"
+
 #: event/templates/event/anniversary.html:218
 #: player/templates/player/redesign/overview.html:630
 msgctxt "overview"
@@ -4116,6 +4146,11 @@ msgctxt "index"
 msgid "и порядка обработки персональных данных"
 msgstr "and the procedure of personal data processing"
 
+#: player/templates/player/index.html:325
+msgctxt "index"
+msgid "читать"
+msgstr "read"
+
 #: player/templates/player/personal_data.html:6
 #: player/templates/player/personal_data.html:10
 msgctxt "personal_data"
@@ -5861,35 +5896,6 @@ msgstr "New character"
 msgctxt "new_player"
 msgid "Ошибка в форме профиля"
 msgstr "Profile form error"
-
-#: player/views/overview.py:372 player/views/overview.py:375
-msgctxt "education"
-msgid "Анна"
-msgstr "Ann"
-
-#: player/views/overview.py:375
-msgctxt "education"
-msgid "Лин"
-msgstr "Lin"
-
-#: player/views/overview.py:375
-msgctxt "education"
-msgid "Мария"
-msgstr "Maria"
-
-#: player/views/overview.py:375
-msgctxt "education"
-msgid "София"
-msgstr "Sofia"
-
-#: player/views/overview.py:375
-msgctxt "education"
-msgid "Ольга"
-msgstr "Olga"
-
-#: player/views/overview.py:381
-msgid "Обзор"
-msgstr "Overview"
 
 #: player/views/set_language.py:38
 msgid "Такого языка в игре нет"
