--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-10-30 18:02+0300\n"
-"PO-Revision-Date: 2024-10-30 18:02+0300\n"
+"POT-Creation-Date: 2024-10-30 18:22+0300\n"
+"PO-Revision-Date: 2024-10-30 18:25+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -4465,7 +4465,7 @@ msgstr ""
 #: player/templates/player/redesign/customization/view_planes.html:10
 msgctxt "plane_select"
 msgid "Авиация"
-msgstr "Aircrafts of"
+msgstr "Aviation"
 
 #: player/templates/player/redesign/game_event/halloween.html:128
 #: player/views/game_event/halloween.py:57
@@ -6448,7 +6448,7 @@ msgstr "Bauxites"
 #: region/templates/region/redesign/region_view.html:224
 msgctxt "region_view"
 msgid "Региональные налоги"
-msgstr "Regional taxes"
+msgstr "Rgional taxes"
 
 #: region/templates/region/redesign/region_view.html:225
 msgctxt "region_view"
